# serenity

Base/etc/: LaunchServer.ini  SystemServer.ini  SystemServerUser.ini
Base/res/apps/: ClockSettings.af  ELFExplorer.af  RegionSettings.af
Kernel/: CMakeLists.txt
Ladybird/: CMakeLists.txt
Ladybird/AppKit/UI/: Event.h  (+4 more)
Ladybird/Qt/: AutoComplete.h  BrowserWindow.cpp  Conversions.cpp  Conversions.h  Icon.cpp  InspectorWidget.cpp  InspectorWidget.h  LocationEdit.cpp  Settings.cpp  SettingsDialog.cpp  TVGIconEngine.cpp  Tab.cpp  WebContentView.cpp  WebContentView.h  WebSocketImplQt.cpp  main.cpp
Ladybird/WebContent/: CMakeLists.txt
Meta/Lagom/: CMakeLists.txt
Ports/: .port_include.sh  .rust_crate_include.sh  AvailablePorts.md
Ports/htop/: package.sh
Ports/hyperfine/: package.sh
Ports/ripgrep/: package.sh
Ports/rust-errno/: package.sh
Ports/rust-getrandom-v2/: package.sh
Ports/rust-getrandom-v3/: package.sh
Ports/rust-libc/: package.sh
Ports/rust-rand-os/: package.sh
Ports/rust-rustix/: package.sh
Ports/v8/: package.sh
Toolchain/: BuildRust.sh
Toolchain/Rust/: .gitignore  README.md  aarch64-unknown-serenity.json  generate-cargo-config.sh  riscv64-unknown-serenity.json  x86_64-unknown-serenity.json
Userland/Applications/: CMakeLists.txt
Userland/Applications/ClockSettings/: CMakeLists.txt  ClockSettingsWidget.cpp  ClockSettingsWidget.gml  ClockSettingsWidget.h  DateTimeTab.cpp  DateTimeTab.gml  DateTimeTab.h  TaskbarClockTab.cpp  TaskbarClockTab.gml  TaskbarClockTab.h  TimeZoneTab.cpp  TimeZoneTab.h  main.cpp
Userland/Applications/RegionSettings/: CMakeLists.txt  RegionSettingsWidget.cpp  RegionSettingsWidget.gml  RegionSettingsWidget.h  main.cpp
Userland/Applications/UsersSettings/: CMakeLists.txt  Constants.h  UserAddDialog.cpp  UserAddDialog.gml  UserAddDialog.h  UserDetailsWidget.cpp  UserDetailsWidget.h  UsersTab.cpp  UsersTab.gml  UsersTab.h  main.cpp
Userland/DevTools/: CMakeLists.txt
Userland/DevTools/ELFExplorer/: CMakeLists.txt  ELFWidget.cpp  ELFWidget.gml  ELFWidget.h  main.cpp
Userland/Services/: CMakeLists.txt
Userland/Shell/: main.cpp
Userland/Utilities/: CMakeLists.txt  headless-browser.cpp  hexdump.cpp  ntpquery.cpp
(+193 files in other folders)
